@@ -61,10 +61,7 @@ import java.security.GeneralSecurityException;
 import java.security.PrivateKey;
 import java.security.cert.X509Certificate;
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ThreadLocalRandom;
 
@@ -185,6 +182,11 @@ class E2ETest {
         ingestionPropertiesWithoutMapping.setFlushImmediately(true);
         ingestionPropertiesWithoutMapping.setDataFormat(DataFormat.CSV);
 
+        IngestionProperties ingestionPropertiesWithIgnoreFirstRecord = new IngestionProperties(databaseName, tableName);
+        ingestionPropertiesWithIgnoreFirstRecord.setFlushImmediately(true);
+        ingestionPropertiesWithIgnoreFirstRecord.setDataFormat(DataFormat.CSV);
+        ingestionPropertiesWithIgnoreFirstRecord.setIgnoreFirstRecord(true);
+
         IngestionProperties ingestionPropertiesWithMappingReference = new IngestionProperties(databaseName, tableName);
         ingestionPropertiesWithMappingReference.setFlushImmediately(true);
         ingestionPropertiesWithMappingReference.setIngestionMapping(mappingReference, IngestionMappingKind.JSON);
@@ -206,6 +208,14 @@ class E2ETest {
                 file = new File(resourcesPath, "dataset.csv");
                 rows = 10;
                 ingestionProperties = ingestionPropertiesWithoutMapping;
+            }
+        }, new TestDataItem() {
+            {
+                file = new File(resourcesPath, "dataset.csv");
+                rows = 9;
+                ingestionProperties = ingestionPropertiesWithIgnoreFirstRecord;
+                testOnstreamingIngestion = false;
+                testOnManaged = false;
             }
         }, new TestDataItem() {
             {
@@ -313,7 +323,7 @@ class E2ETest {
         for (TestDataItem item : dataForTests) {
             FileSourceInfo fileSourceInfo = new FileSourceInfo(item.file.getPath(), item.file.length());
             try {
-                (isManaged ? managedStreamingIngestClient : ingestClient).ingestFromFile(fileSourceInfo, item.ingestionProperties);
+                ((isManaged && item.testOnManaged) ? managedStreamingIngestClient : ingestClient).ingestFromFile(fileSourceInfo, item.ingestionProperties);
             } catch (Exception ex) {
                 Assertions.fail(ex);
             }
@@ -331,7 +341,7 @@ class E2ETest {
                 streamSourceInfo.setCompressionType(CompressionType.gz);
             }
             try {
-                (isManaged ? managedStreamingIngestClient : ingestClient).ingestFromStream(streamSourceInfo, item.ingestionProperties);
+                ((isManaged && item.testOnManaged) ? managedStreamingIngestClient : ingestClient).ingestFromStream(streamSourceInfo, item.ingestionProperties);
             } catch (Exception ex) {
                 Assertions.fail(ex);
             }
@@ -563,7 +573,7 @@ class E2ETest {
 
     @Test
     void testNoRedirectsCloudFail() {
-        KustoTrustedEndpoints.addTrustedHosts(List.of(new MatchRule("statusreturner.azurewebsites.net", false)), false);
+        KustoTrustedEndpoints.addTrustedHosts(Collections.singletonList(new MatchRule("statusreturner.azurewebsites.net", false)), false);
         List<Integer> redirectCodes = Arrays.asList(301, 302, 307, 308);
         redirectCodes.parallelStream().map(code -> {
             try (Client client = ClientFactory.createClient(
@@ -588,7 +598,7 @@ class E2ETest {
 
     @Test
     void testNoRedirectsClientFail() {
-        KustoTrustedEndpoints.addTrustedHosts(List.of(new MatchRule("statusreturner.azurewebsites.net", false)), false);
+        KustoTrustedEndpoints.addTrustedHosts(Arrays.asList(new MatchRule("statusreturner.azurewebsites.net", false)), false);
         List<Integer> redirectCodes = Arrays.asList(301, 302, 307, 308);
         redirectCodes.parallelStream().map(code -> {
             try (Client client = ClientFactory.createClient(
